<package format="3">
  <name>science_clients_rs</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO: License declaration</license>
  
  <exec_depend>science_interfaces_rs</exec_depend>

  <depend>anyhow</depend>
  <depend>rclrs</depend>
  <depend>cv_bridge_rs</depend>
  <depend>opencv</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>input-macro</depend>
  <depend>colored</depend>
  <depend>no-panic</depend>


  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>