<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>science_interfaces_rs</name>
  <version>3.0.0</version>
  <description>'This package contains ROS2 action files that specify the format of command messages to the science package components'</description>
  <author email="parham2002sh@gmail.com">Parham Sharafoleslami</author>
  <maintainer email="parham2002sh@gmail.com">Parham Sharafoleslami</maintainer>
  <author email="austinlake04@berkeley.edu">Austin Lake</author>
  <maintainer email="austinlake04@berkeley.edu">Austin Lake</maintainer>
  <license>BSD-3-Clause License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
