[package]
name = "science_servers_rs"
version = "1.0.0"
edition = "2021"
authors = ["Austin Lake <austinlake04@gmail.com>"]

[package.metadata.ros]
install_to_share = ["launch"]

[dependencies]
anyhow = "*"
rclrs = "*"
opencv = "0.75"
cv_bridge_rs = "*"
sensor_msgs = "*"
std_srvs = "*"
input-macro ="*"
science_interfaces_rs = "*"
colored = "*"
rppal = "*"

[[bin]]
name = "brush_server"
path = "./src/brush_server.rs"
[[bin]]
name = "ir_camera_server"
path = "./src/ir_camera_server.rs"
[[bin]]
name = "microscope_server"
path = "./src/microscope_server.rs"
[[bin]]
name = "stepper_motor_server"
path = "./src/stepper_motor_server.rs"
[[bin]]
name = "uv_camera_server"
path = "./src/uv_camera_server.rs"
[[bin]]
name = "uv_light_server"
path = "./src/uv_light_server.rs"
[[bin]]
name = "vacuum_server"
path = "./src/vacuum_server.rs"
[[bin]]
name = "water_pump_server"
path = "./src/water_pump_server.rs"
