<package format="3">
  <name>science_servers_rs</name>
  <version>1.0.0</version>
  <description>This package contains server-side binaries for the SC Robotics science command and control using Rust and ROS2</description>
  <author email="austinlake04@gmail.com">Austin Lake</author>
  <maintainer email="austinlake04@gmail.com">Austin Lake</maintainer>
  <license>MIT License</license>

  <exec_depend>science_interfaces_rs</exec_depend>
  <depend>anyhow</depend>
  <depend>rclrs</depend>
  <depend>cv_bridge_rs</depend>
  <depend>opencv</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>colored</depend>
  <depend>rppal</depend>

  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>