[package]
name = "rust_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "publisher"
path = "./src/publisher.rs"

[[bin]]
name = "subscriber"
path = "./src/subscriber.rs"


[dependencies]
opencv = "0.74"
cv_bridge = "*"
sensor_msgs = "*"